# cannatracker-back

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: deps.py  friends.py  login.py  main.py  plants.py  templates.py  users.py
src/core/: models.py  redis_io.py  security.py
src/core/controller/: friend.py  plant.py  schedule_template.py  user.py
src/core/schedules/: biobizz-all-mix.json  biobizz-light-mix.json
src/models/: fertilizer.py  grow_stage.py  plant.py  user.py  watering.py  watering_records.py
src/tests/: test_plant.py
