[tool.poetry]
name = "cannatracker-back"
version = "0.1.0"
description = ""
authors = ["Thomas <thomas.schleicher@fastad.de>"]
readme = "README.md"

[tool.poetry.dependencies]
redis = "^5.0.7"
python = "^3.11"
fastapi = "^0.111.0"
passlib = "^1.7.4"
pydantic = "^2.8.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
